# drone-rescue

./: .gitignore  .gitmodules  README.md
argos_simulation/: search_example.argos  search_example.bzz  target_drift_example.bzz
argos_simulation/buzz_includes/: debug.bzz
argos_simulation/buzz_includes/search_example/: global_variables.bzz
argos_simulation/config/search_example/: parameters.bzz
controller/: README.md
controller/src/: CMakeLists.txt
controller/src/argos/: buzz_closures_drone_rescue_sim.cpp  buzz_controller_drone_rescue_sim.cpp  buzz_controller_drone_rescue_sim.h
controller/src/argos/map/: belief_map.cpp  belief_map.h  map_loop_functions.cpp  map_loop_functions.h
docker/devel/: Dockerfile  argos-key  controller-key  controller-key.pub  instructions.md
robot/: bash_aliases  dji_vehicle_node.launch  instructions.md  rs_camera.launch
robot/object-detection/: Dockerfile
sample_maps/: fake0.txt
sim/: README.md
sim/argos_simulation/: search_example.argos  search_example.bzz  sparse_sar.argos  sparse_sar.bzz  target_drift_example.bzz  tests.sh
sim/argos_simulation/buzz_includes/search_example/: belief_search.bzz  global_variables.bzz  utils.bzz
sim/argos_simulation/config/search_example/: parameters.bzz
sim/controller/src/: CMakeLists.txt
sim/controller/src/argos/: buzz_closures_drone_rescue_sim.cpp  buzz_controller_drone_rescue_sim.cpp  buzz_controller_drone_rescue_sim.h
sim/controller/src/argos/map/: belief_map.cpp  belief_map.h  map_loop_functions.cpp  map_loop_functions.h
sim/controller/src/argos/results/: datasize_2020_15_belief.txt  datasize_2020_15_random.txt  datasize_2020_20_belief.txt  datasize_2020_20_random.txt  datasize_2020_25_belief.txt  datasize_2020_25_random.txt  datasize_3030_15_belief.txt  datasize_3030_15_random.txt  (+66 more)
sim/docker/devel/: Dockerfile  argos-key.pub  instructions.md
sim/sample_maps/: fake1.txt
